--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Perpedus</string>
-    <string name="scan_location">Scanning your location...</string>
-    <string name="retrieve_places">Retrieving places...</string>
+    <string name="scan_location">Scanning your location&#8230;</string>
+    <string name="retrieve_places">Retrieving places&#8230;</string>
     <string name="places_found" formatted="false">%number% places found!</string>
     <string name="visible_places" formatted="false">%visible%/%all% places</string>
     <string name="search_button">Search</string>
@@ -15,10 +15,11 @@
     <string name="fatal_error_no_gps">Sorry, your device doesn\'t have a gps :(</string>
     <string name="permission_denied_camera">We need your camera permission to look around</string>
     <string name="permission_denied_location">We need your location permission provide nearby places</string>
-    <string name="no_landscape">Landscape is not supported&#8230; yet</string>
+    <string name="no_landscape">Landscape is not supported</string>
     <string name="settings">Settings</string>
     <string name="settings_credits">Credits</string>
     <string name="google_error">Cannot retrieve data</string>
+    <string name="no_photos">No photos</string>
 
     <string name="place_type_accounting">Accounting</string>
     <string name="place_type_airport">Airport</string>
