Restyled place types dialog

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,7 @@
     <string name="types_all_types">All Categories</string>
 
     <string name="settings">Settings</string>
+    <string name="settings_language">Language</string>
     <string name="settings_credits">Credits</string>
 
     <!-- Place types -->
