--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,8 +32,10 @@
     <string name="types_all_types">All Categories</string>
 
     <string name="settings">Settings</string>
-    <string name="settings_language">Language</string>
+    <string name="settings_language">Preferred Language</string>
     <string name="settings_credits">Credits</string>
+    <string name="settings_privacy_policy">Privacy Policy</string>
+    <string name="settings_terms_and_conditions">Terms and Conditions</string>
 
     <!-- Place details -->
     <string name="place_details_no_phone">No phone available</string>
