--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,6 +40,11 @@
     <!-- Place details -->
     <string name="place_details_no_phone">No phone available</string>
 
+    <!-- Sensors calibration -->
+    <string name="sensors_calibration_never_show_again_text">Never show me again</string>
+    <string name="sensors_calibration_description_text">Before using this app, it is recommended to calibrate your sensors. Move your phone into an 8 shape like in the picture below.</string>
+    <string name="sensors_calibration_ok_button">GOT IT</string>
+
     <!-- Place types -->
     <string name="place_type_accounting">Accounting</string>
     <string name="place_type_airport">Airport</string>
