--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <!-- Loading Activity -->
     <string name="loading_retrieving_location_text">Finding your location&#8230;</string>
     <string name="loading_retrieving_places_text">Looking around for places&#8230;</string>
+    <string name="loading_enable_location_text">Please enable your location</string>
     <string name="loading_retry_button">RETRY</string>
     <string name="loading_places_error">Error retrieving places</string>
     <string name="toast_no_camera">Sorry, your device doesn\'t have a camera</string>
@@ -35,7 +36,7 @@
     <string name="types_all_types">All Categories</string>
 
     <string name="settings">Settings</string>
-    <string name="settings_language">Preferred Language</string>
+    <string name="settings_language">Places Language</string>
     <string name="settings_credits">Credits</string>
     <string name="settings_privacy_policy">Privacy Policy</string>
     <string name="settings_terms_and_conditions">Terms and Conditions</string>
