--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,9 @@
     <string name="main_no_landscape_text">Landscape mode is not supported</string>
     <string name="main_retrieving_places_text">Looking around for places</string>
     <string name="main_please_wait_text">Please wait&#8230;</string>
+    <string name="main_no_gps_title">No GPS signal</string>
+    <string name="main_no_gps_description">Locations might be inaccurate</string>
+    <string name="toast_place_found" formatted="false">%number% place found</string>
     <string name="toast_places_found" formatted="false">%number% places found</string>
     <string name="toast_no_places_found" >No places found</string>
     <string name="toast_places_error">Cannot retrieve places</string>
@@ -40,11 +43,15 @@
     <string name="drawer_radius_text">Search Area</string>
     <string name="drawer_km_text">km</string>
     <string name="drawer_type_text">Category</string>
+    <string name="drawer_number_text">How many places?</string>
+    <string name="drawer_all">All</string>
+    <string name="drawer_only_closest">Only the closest one</string>
     <string name="drawer_edit_type_text">EDIT</string>
     <string name="drawer_search_button">SEARCH</string>
     <string name="types_all_types">All Categories</string>
+    <string name="types_field_hint">Category name</string>
 
-    <string name="settings">Settings</string>
+    <string name="settings_title">Settings</string>
     <string name="settings_app_language">App Language</string>
     <string name="settings_language">Places Language</string>
     <string name="settings_credits">Credits</string>
@@ -54,9 +61,10 @@
     <!-- Place details -->
     <string name="place_details_no_phone">No phone available</string>
     <string name="place_details_cannot_call">Cannot call this number</string>
+    <string name="place_details_cannot_navigate">You don\'t have a navigation app</string>
+    <string name="place_details_navigate">Take me there</string>
 
     <!-- Sensors calibration -->
-    <string name="sensors_calibration_never_show_again_text">Don\'t show me this message again</string>
     <string name="sensors_calibration_title_text">Lets CALIBRATE your awesome phone</string>
     <string name="sensors_calibration_description_text">Wave your device around several times in a figure of 8 pattern</string>
     <string name="sensors_calibration_hint_text">It\'s recommended to calibrate your phone each time you use the app</string>
